--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -7282,6 +7282,434 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "91       True\n",
+       "96      False\n",
+       "134     False\n",
+       "176     False\n",
+       "197     False\n",
+       "        ...  \n",
+       "1262    False\n",
+       "1283    False\n",
+       "1284    False\n",
+       "1302    False\n",
+       "1303    False\n",
+       "Name: HumidityAvgPercent, Length: 225, dtype: bool"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.HumidityAvgPercent >= '80'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>91</th>\n",
+       "      <td>2014-03-22</td>\n",
+       "      <td>77</td>\n",
+       "      <td>69</td>\n",
+       "      <td>61</td>\n",
+       "      <td>65</td>\n",
+       "      <td>62</td>\n",
+       "      <td>51</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>209</th>\n",
+       "      <td>2014-07-18</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>72</td>\n",
+       "      <td>74</td>\n",
+       "      <td>71</td>\n",
+       "      <td>68</td>\n",
+       "      <td>100</td>\n",
+       "      <td>87</td>\n",
+       "      <td>74</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>3</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1.52</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>266</th>\n",
+       "      <td>2014-09-13</td>\n",
+       "      <td>66</td>\n",
+       "      <td>63</td>\n",
+       "      <td>60</td>\n",
+       "      <td>63</td>\n",
+       "      <td>60</td>\n",
+       "      <td>57</td>\n",
+       "      <td>100</td>\n",
+       "      <td>92</td>\n",
+       "      <td>84</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.19</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>267</th>\n",
+       "      <td>2014-09-14</td>\n",
+       "      <td>77</td>\n",
+       "      <td>71</td>\n",
+       "      <td>64</td>\n",
+       "      <td>67</td>\n",
+       "      <td>64</td>\n",
+       "      <td>62</td>\n",
+       "      <td>100</td>\n",
+       "      <td>87</td>\n",
+       "      <td>73</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.16</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>272</th>\n",
+       "      <td>2014-09-19</td>\n",
+       "      <td>86</td>\n",
+       "      <td>80</td>\n",
+       "      <td>74</td>\n",
+       "      <td>75</td>\n",
+       "      <td>74</td>\n",
+       "      <td>71</td>\n",
+       "      <td>100</td>\n",
+       "      <td>85</td>\n",
+       "      <td>69</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.89</td>\n",
+       "      <td>29.84</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>14</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1157</th>\n",
+       "      <td>2017-02-20</td>\n",
+       "      <td>70</td>\n",
+       "      <td>64</td>\n",
+       "      <td>58</td>\n",
+       "      <td>59</td>\n",
+       "      <td>57</td>\n",
+       "      <td>54</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>59</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>29.86</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>34</td>\n",
+       "      <td>1.12</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1170</th>\n",
+       "      <td>2017-03-05</td>\n",
+       "      <td>75</td>\n",
+       "      <td>66</td>\n",
+       "      <td>57</td>\n",
+       "      <td>65</td>\n",
+       "      <td>60</td>\n",
+       "      <td>57</td>\n",
+       "      <td>100</td>\n",
+       "      <td>84</td>\n",
+       "      <td>68</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.11</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1176</th>\n",
+       "      <td>2017-03-11</td>\n",
+       "      <td>66</td>\n",
+       "      <td>64</td>\n",
+       "      <td>61</td>\n",
+       "      <td>64</td>\n",
+       "      <td>62</td>\n",
+       "      <td>59</td>\n",
+       "      <td>100</td>\n",
+       "      <td>94</td>\n",
+       "      <td>87</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.09</td>\n",
+       "      <td>30.01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.73</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1178</th>\n",
+       "      <td>2017-03-13</td>\n",
+       "      <td>70</td>\n",
+       "      <td>58</td>\n",
+       "      <td>48</td>\n",
+       "      <td>52</td>\n",
+       "      <td>48</td>\n",
+       "      <td>46</td>\n",
+       "      <td>100</td>\n",
+       "      <td>85</td>\n",
+       "      <td>44</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.14</td>\n",
+       "      <td>30.06</td>\n",
+       "      <td>10</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>Rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1207</th>\n",
+       "      <td>2017-04-11</td>\n",
+       "      <td>72</td>\n",
+       "      <td>67</td>\n",
+       "      <td>62</td>\n",
+       "      <td>70</td>\n",
+       "      <td>65</td>\n",
+       "      <td>59</td>\n",
+       "      <td>100</td>\n",
+       "      <td>94</td>\n",
+       "      <td>87</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.12</td>\n",
+       "      <td>30</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.34</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>114 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "91    2014-03-22         77        69        61            65           62   \n",
+       "209   2014-07-18         78        75        72            74           71   \n",
+       "266   2014-09-13         66        63        60            63           60   \n",
+       "267   2014-09-14         77        71        64            67           64   \n",
+       "272   2014-09-19         86        80        74            75           74   \n",
+       "...          ...        ...       ...       ...           ...          ...   \n",
+       "1157  2017-02-20         70        64        58            59           57   \n",
+       "1170  2017-03-05         75        66        57            65           60   \n",
+       "1176  2017-03-11         66        64        61            64           62   \n",
+       "1178  2017-03-13         70        58        48            52           48   \n",
+       "1207  2017-04-11         72        67        62            70           65   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "91             51                 100                 80                 60   \n",
+       "209            68                 100                 87                 74   \n",
+       "266            57                 100                 92                 84   \n",
+       "267            62                 100                 87                 73   \n",
+       "272            71                 100                 85                 69   \n",
+       "...           ...                 ...                ...                ...   \n",
+       "1157           54                 100                 80                 59   \n",
+       "1170           57                 100                 84                 68   \n",
+       "1176           59                 100                 94                 87   \n",
+       "1178           46                 100                 85                 44   \n",
+       "1207           59                 100                 94                 87   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "91    ...                     29.95                     29.88   \n",
+       "209   ...                     29.93                     29.87   \n",
+       "266   ...                     30.19                      30.1   \n",
+       "267   ...                     30.16                      30.1   \n",
+       "272   ...                     29.89                     29.84   \n",
+       "...   ...                       ...                       ...   \n",
+       "1157  ...                     29.95                     29.86   \n",
+       "1170  ...                     30.11                     29.99   \n",
+       "1176  ...                     30.09                     30.01   \n",
+       "1178  ...                     30.14                     30.06   \n",
+       "1207  ...                     30.12                        30   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "91                    10                  7                  1          12   \n",
+       "209                   10                  7                  1          14   \n",
+       "266                   10                  5                  1          14   \n",
+       "267                   10                  8                  3           7   \n",
+       "272                   10                  8                  2          10   \n",
+       "...                  ...                ...                ...         ...   \n",
+       "1157                  10                  8                  1          21   \n",
+       "1170                  10                  6                  1          12   \n",
+       "1176                  10                  6                  1           9   \n",
+       "1178                  10                  6                  2          12   \n",
+       "1207                  10                  8                  1          10   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches               Events  \n",
+       "91            4          17                      0                       \n",
+       "209           3          27                   1.52  Rain , Thunderstorm  \n",
+       "266           5          24                   0.68                 Rain  \n",
+       "267           2          10                      0                       \n",
+       "272           3          14                   0.13                 Rain  \n",
+       "...         ...         ...                    ...                  ...  \n",
+       "1157          4          34                   1.12  Rain , Thunderstorm  \n",
+       "1170          4          19                   0.27                 Rain  \n",
+       "1176          4          15                   0.73                 Rain  \n",
+       "1178          3          18                   0.01                 Rain  \n",
+       "1207          4          18                   0.34  Rain , Thunderstorm  \n",
+       "\n",
+       "[114 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2[df2.HumidityAvgPercent >= '80']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
