--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -7933,6 +7933,374 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-21</td>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67</td>\n",
+       "      <td>49</td>\n",
+       "      <td>43</td>\n",
+       "      <td>93</td>\n",
+       "      <td>75</td>\n",
+       "      <td>57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>29.59</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-22</td>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-23</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27</td>\n",
+       "      <td>23</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-24</td>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21</td>\n",
+       "      <td>89</td>\n",
+       "      <td>56</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>36</td>\n",
+       "      <td>86</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2013-12-26</td>\n",
+       "      <td>57</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>36</td>\n",
+       "      <td>33</td>\n",
+       "      <td>79</td>\n",
+       "      <td>63</td>\n",
+       "      <td>47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>30.34</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2013-12-27</td>\n",
+       "      <td>60</td>\n",
+       "      <td>53</td>\n",
+       "      <td>45</td>\n",
+       "      <td>41</td>\n",
+       "      <td>39</td>\n",
+       "      <td>37</td>\n",
+       "      <td>83</td>\n",
+       "      <td>65</td>\n",
+       "      <td>47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.39</td>\n",
+       "      <td>30.34</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2013-12-28</td>\n",
+       "      <td>62</td>\n",
+       "      <td>51</td>\n",
+       "      <td>40</td>\n",
+       "      <td>43</td>\n",
+       "      <td>39</td>\n",
+       "      <td>33</td>\n",
+       "      <td>92</td>\n",
+       "      <td>64</td>\n",
+       "      <td>36</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.17</td>\n",
+       "      <td>30.04</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>14</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2013-12-29</td>\n",
+       "      <td>64</td>\n",
+       "      <td>50</td>\n",
+       "      <td>36</td>\n",
+       "      <td>49</td>\n",
+       "      <td>41</td>\n",
+       "      <td>28</td>\n",
+       "      <td>92</td>\n",
+       "      <td>76</td>\n",
+       "      <td>60</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>29.99</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2013-12-30</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>31</td>\n",
+       "      <td>26</td>\n",
+       "      <td>21</td>\n",
+       "      <td>75</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.26</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "0  2013-12-21         74        60        45            67           49   \n",
+       "1  2013-12-22         56        48        39            43           36   \n",
+       "2  2013-12-23         58        45        32            31           27   \n",
+       "3  2013-12-24         61        46        31            36           28   \n",
+       "4  2013-12-25         58        50        41            44           40   \n",
+       "5  2013-12-26         57        48        39            39           36   \n",
+       "6  2013-12-27         60        53        45            41           39   \n",
+       "7  2013-12-28         62        51        40            43           39   \n",
+       "8  2013-12-29         64        50        36            49           41   \n",
+       "9  2013-12-30         44        40        35            31           26   \n",
+       "\n",
+       "  DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  ...  \\\n",
+       "0           43                  93                 75                 57  ...   \n",
+       "1           28                  93                 68                 43  ...   \n",
+       "2           23                  76                 52                 27  ...   \n",
+       "3           21                  89                 56                 22  ...   \n",
+       "4           36                  86                 71                 56  ...   \n",
+       "5           33                  79                 63                 47  ...   \n",
+       "6           37                  83                 65                 47  ...   \n",
+       "7           33                  92                 64                 36  ...   \n",
+       "8           28                  92                 76                 60  ...   \n",
+       "9           21                  75                 60                 45  ...   \n",
+       "\n",
+       "  SeaLevelPressureAvgInches SeaLevelPressureLowInches VisibilityHighMiles  \\\n",
+       "0                     29.68                     29.59                  10   \n",
+       "1                     30.13                     29.87                  10   \n",
+       "2                     30.49                     30.41                  10   \n",
+       "3                     30.45                      30.3                  10   \n",
+       "4                     30.33                     30.27                  10   \n",
+       "5                      30.4                     30.34                  10   \n",
+       "6                     30.39                     30.34                  10   \n",
+       "7                     30.17                     30.04                  10   \n",
+       "8                      30.1                     29.99                  10   \n",
+       "9                     30.33                     30.26                  10   \n",
+       "\n",
+       "  VisibilityAvgMiles VisibilityLowMiles WindHighMPH WindAvgMPH WindGustMPH  \\\n",
+       "0                  7                  2          20          4          31   \n",
+       "1                 10                  5          16          6          25   \n",
+       "2                 10                 10           8          3          12   \n",
+       "3                 10                  7          12          4          20   \n",
+       "4                 10                  7          10          2          16   \n",
+       "5                  9                  7          12          3          17   \n",
+       "6                  9                  7           7          1          11   \n",
+       "7                 10                  7          10          2          14   \n",
+       "8                 10                  4          17          5          24   \n",
+       "9                 10                 10          13          5          21   \n",
+       "\n",
+       "  PrecipitationSumInches               Events  \n",
+       "0                   0.46  Rain , Thunderstorm  \n",
+       "1                      0                       \n",
+       "2                      0                       \n",
+       "3                      0                       \n",
+       "4                      T                       \n",
+       "5                      0                       \n",
+       "6                      T                       \n",
+       "7                      T                       \n",
+       "8                      0                       \n",
+       "9                      0                       \n",
+       "\n",
+       "[10 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
