--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -8321,6 +8321,434 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        True\n",
+       "1        True\n",
+       "2       False\n",
+       "3        True\n",
+       "4        True\n",
+       "        ...  \n",
+       "1314    False\n",
+       "1315    False\n",
+       "1316    False\n",
+       "1317    False\n",
+       "1318    False\n",
+       "Name: VisibilityLowMiles, Length: 1319, dtype: bool"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.VisibilityLowMiles > '10'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-21</td>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67</td>\n",
+       "      <td>49</td>\n",
+       "      <td>43</td>\n",
+       "      <td>93</td>\n",
+       "      <td>75</td>\n",
+       "      <td>57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>29.59</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-22</td>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-24</td>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21</td>\n",
+       "      <td>89</td>\n",
+       "      <td>56</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>36</td>\n",
+       "      <td>86</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2013-12-26</td>\n",
+       "      <td>57</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>36</td>\n",
+       "      <td>33</td>\n",
+       "      <td>79</td>\n",
+       "      <td>63</td>\n",
+       "      <td>47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.4</td>\n",
+       "      <td>30.34</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1302</th>\n",
+       "      <td>2017-07-15</td>\n",
+       "      <td>103</td>\n",
+       "      <td>87</td>\n",
+       "      <td>71</td>\n",
+       "      <td>73</td>\n",
+       "      <td>70</td>\n",
+       "      <td>63</td>\n",
+       "      <td>100</td>\n",
+       "      <td>65</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.01</td>\n",
+       "      <td>29.94</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>23</td>\n",
+       "      <td>3</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1303</th>\n",
+       "      <td>2017-07-16</td>\n",
+       "      <td>99</td>\n",
+       "      <td>84</td>\n",
+       "      <td>68</td>\n",
+       "      <td>71</td>\n",
+       "      <td>69</td>\n",
+       "      <td>65</td>\n",
+       "      <td>100</td>\n",
+       "      <td>67</td>\n",
+       "      <td>33</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.93</td>\n",
+       "      <td>29.84</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>12</td>\n",
+       "      <td>3</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1310</th>\n",
+       "      <td>2017-07-23</td>\n",
+       "      <td>103</td>\n",
+       "      <td>90</td>\n",
+       "      <td>77</td>\n",
+       "      <td>74</td>\n",
+       "      <td>71</td>\n",
+       "      <td>66</td>\n",
+       "      <td>85</td>\n",
+       "      <td>58</td>\n",
+       "      <td>31</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>29.82</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.04</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1311</th>\n",
+       "      <td>2017-07-24</td>\n",
+       "      <td>102</td>\n",
+       "      <td>89</td>\n",
+       "      <td>76</td>\n",
+       "      <td>75</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>91</td>\n",
+       "      <td>60</td>\n",
+       "      <td>29</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>29.89</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13</td>\n",
+       "      <td>3</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1312</th>\n",
+       "      <td>2017-07-25</td>\n",
+       "      <td>103</td>\n",
+       "      <td>91</td>\n",
+       "      <td>78</td>\n",
+       "      <td>75</td>\n",
+       "      <td>71</td>\n",
+       "      <td>63</td>\n",
+       "      <td>91</td>\n",
+       "      <td>61</td>\n",
+       "      <td>31</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.03</td>\n",
+       "      <td>29.95</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>15</td>\n",
+       "      <td>7</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>517 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "0     2013-12-21         74        60        45            67           49   \n",
+       "1     2013-12-22         56        48        39            43           36   \n",
+       "3     2013-12-24         61        46        31            36           28   \n",
+       "4     2013-12-25         58        50        41            44           40   \n",
+       "5     2013-12-26         57        48        39            39           36   \n",
+       "...          ...        ...       ...       ...           ...          ...   \n",
+       "1302  2017-07-15        103        87        71            73           70   \n",
+       "1303  2017-07-16         99        84        68            71           69   \n",
+       "1310  2017-07-23        103        90        77            74           71   \n",
+       "1311  2017-07-24        102        89        76            75           71   \n",
+       "1312  2017-07-25        103        91        78            75           71   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "0              43                  93                 75                 57   \n",
+       "1              28                  93                 68                 43   \n",
+       "3              21                  89                 56                 22   \n",
+       "4              36                  86                 71                 56   \n",
+       "5              33                  79                 63                 47   \n",
+       "...           ...                 ...                ...                ...   \n",
+       "1302           63                 100                 65                 29   \n",
+       "1303           65                 100                 67                 33   \n",
+       "1310           66                  85                 58                 31   \n",
+       "1311           56                  91                 60                 29   \n",
+       "1312           63                  91                 61                 31   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "0     ...                     29.68                     29.59   \n",
+       "1     ...                     30.13                     29.87   \n",
+       "3     ...                     30.45                      30.3   \n",
+       "4     ...                     30.33                     30.27   \n",
+       "5     ...                      30.4                     30.34   \n",
+       "...   ...                       ...                       ...   \n",
+       "1302  ...                     30.01                     29.94   \n",
+       "1303  ...                     29.93                     29.84   \n",
+       "1310  ...                     29.88                     29.82   \n",
+       "1311  ...                     29.95                     29.89   \n",
+       "1312  ...                     30.03                     29.95   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "0                     10                  7                  2          20   \n",
+       "1                     10                 10                  5          16   \n",
+       "3                     10                 10                  7          12   \n",
+       "4                     10                 10                  7          10   \n",
+       "5                     10                  9                  7          12   \n",
+       "...                  ...                ...                ...         ...   \n",
+       "1302                  10                  9                  2          23   \n",
+       "1303                  10                  9                  6          12   \n",
+       "1310                  10                 10                  2          13   \n",
+       "1311                  10                 10                  9          13   \n",
+       "1312                  10                 10                  9          15   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches               Events  \n",
+       "0             4          31                   0.46  Rain , Thunderstorm  \n",
+       "1             6          25                      0                       \n",
+       "3             4          20                      0                       \n",
+       "4             2          16                      T                       \n",
+       "5             3          17                      0                       \n",
+       "...         ...         ...                    ...                  ...  \n",
+       "1302          3          35                   0.16  Rain , Thunderstorm  \n",
+       "1303          3          24                      0                       \n",
+       "1310          4          24                   0.04  Rain , Thunderstorm  \n",
+       "1311          3          19                   0.01  Rain , Thunderstorm  \n",
+       "1312          7          24                      0                       \n",
+       "\n",
+       "[517 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.VisibilityLowMiles > '10']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
