--- a/credit-risk-analysis.ipynb
+++ b/credit-risk-analysis.ipynb
@@ -8791,6 +8791,434 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       True\n",
+       "1       True\n",
+       "2       True\n",
+       "3       True\n",
+       "4       True\n",
+       "        ... \n",
+       "1314    True\n",
+       "1315    True\n",
+       "1316    True\n",
+       "1317    True\n",
+       "1318    True\n",
+       "Name: VisibilityHighMiles, Length: 1319, dtype: bool"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.VisibilityHighMiles <= '10'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>TempHighF</th>\n",
+       "      <th>TempAvgF</th>\n",
+       "      <th>TempLowF</th>\n",
+       "      <th>DewPointHighF</th>\n",
+       "      <th>DewPointAvgF</th>\n",
+       "      <th>DewPointLowF</th>\n",
+       "      <th>HumidityHighPercent</th>\n",
+       "      <th>HumidityAvgPercent</th>\n",
+       "      <th>HumidityLowPercent</th>\n",
+       "      <th>...</th>\n",
+       "      <th>SeaLevelPressureAvgInches</th>\n",
+       "      <th>SeaLevelPressureLowInches</th>\n",
+       "      <th>VisibilityHighMiles</th>\n",
+       "      <th>VisibilityAvgMiles</th>\n",
+       "      <th>VisibilityLowMiles</th>\n",
+       "      <th>WindHighMPH</th>\n",
+       "      <th>WindAvgMPH</th>\n",
+       "      <th>WindGustMPH</th>\n",
+       "      <th>PrecipitationSumInches</th>\n",
+       "      <th>Events</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2013-12-21</td>\n",
+       "      <td>74</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67</td>\n",
+       "      <td>49</td>\n",
+       "      <td>43</td>\n",
+       "      <td>93</td>\n",
+       "      <td>75</td>\n",
+       "      <td>57</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.68</td>\n",
+       "      <td>29.59</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>4</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0.46</td>\n",
+       "      <td>Rain , Thunderstorm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2013-12-22</td>\n",
+       "      <td>56</td>\n",
+       "      <td>48</td>\n",
+       "      <td>39</td>\n",
+       "      <td>43</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>68</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.13</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>16</td>\n",
+       "      <td>6</td>\n",
+       "      <td>25</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2013-12-23</td>\n",
+       "      <td>58</td>\n",
+       "      <td>45</td>\n",
+       "      <td>32</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27</td>\n",
+       "      <td>23</td>\n",
+       "      <td>76</td>\n",
+       "      <td>52</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.49</td>\n",
+       "      <td>30.41</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>8</td>\n",
+       "      <td>3</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2013-12-24</td>\n",
+       "      <td>61</td>\n",
+       "      <td>46</td>\n",
+       "      <td>31</td>\n",
+       "      <td>36</td>\n",
+       "      <td>28</td>\n",
+       "      <td>21</td>\n",
+       "      <td>89</td>\n",
+       "      <td>56</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.45</td>\n",
+       "      <td>30.3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2013-12-25</td>\n",
+       "      <td>58</td>\n",
+       "      <td>50</td>\n",
+       "      <td>41</td>\n",
+       "      <td>44</td>\n",
+       "      <td>40</td>\n",
+       "      <td>36</td>\n",
+       "      <td>86</td>\n",
+       "      <td>71</td>\n",
+       "      <td>56</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30.33</td>\n",
+       "      <td>30.27</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2</td>\n",
+       "      <td>16</td>\n",
+       "      <td>T</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1314</th>\n",
+       "      <td>2017-07-27</td>\n",
+       "      <td>103</td>\n",
+       "      <td>89</td>\n",
+       "      <td>75</td>\n",
+       "      <td>71</td>\n",
+       "      <td>67</td>\n",
+       "      <td>61</td>\n",
+       "      <td>82</td>\n",
+       "      <td>54</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.97</td>\n",
+       "      <td>29.88</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>5</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1315</th>\n",
+       "      <td>2017-07-28</td>\n",
+       "      <td>105</td>\n",
+       "      <td>91</td>\n",
+       "      <td>76</td>\n",
+       "      <td>71</td>\n",
+       "      <td>64</td>\n",
+       "      <td>55</td>\n",
+       "      <td>87</td>\n",
+       "      <td>54</td>\n",
+       "      <td>20</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.9</td>\n",
+       "      <td>29.81</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>14</td>\n",
+       "      <td>5</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1316</th>\n",
+       "      <td>2017-07-29</td>\n",
+       "      <td>107</td>\n",
+       "      <td>92</td>\n",
+       "      <td>77</td>\n",
+       "      <td>72</td>\n",
+       "      <td>64</td>\n",
+       "      <td>55</td>\n",
+       "      <td>82</td>\n",
+       "      <td>51</td>\n",
+       "      <td>19</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.86</td>\n",
+       "      <td>29.79</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1317</th>\n",
+       "      <td>2017-07-30</td>\n",
+       "      <td>106</td>\n",
+       "      <td>93</td>\n",
+       "      <td>79</td>\n",
+       "      <td>70</td>\n",
+       "      <td>68</td>\n",
+       "      <td>63</td>\n",
+       "      <td>69</td>\n",
+       "      <td>48</td>\n",
+       "      <td>27</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>29.87</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1318</th>\n",
+       "      <td>2017-07-31</td>\n",
+       "      <td>99</td>\n",
+       "      <td>88</td>\n",
+       "      <td>77</td>\n",
+       "      <td>66</td>\n",
+       "      <td>61</td>\n",
+       "      <td>54</td>\n",
+       "      <td>64</td>\n",
+       "      <td>43</td>\n",
+       "      <td>22</td>\n",
+       "      <td>...</td>\n",
+       "      <td>29.97</td>\n",
+       "      <td>29.91</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1314 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date  TempHighF  TempAvgF  TempLowF DewPointHighF DewPointAvgF  \\\n",
+       "0     2013-12-21         74        60        45            67           49   \n",
+       "1     2013-12-22         56        48        39            43           36   \n",
+       "2     2013-12-23         58        45        32            31           27   \n",
+       "3     2013-12-24         61        46        31            36           28   \n",
+       "4     2013-12-25         58        50        41            44           40   \n",
+       "...          ...        ...       ...       ...           ...          ...   \n",
+       "1314  2017-07-27        103        89        75            71           67   \n",
+       "1315  2017-07-28        105        91        76            71           64   \n",
+       "1316  2017-07-29        107        92        77            72           64   \n",
+       "1317  2017-07-30        106        93        79            70           68   \n",
+       "1318  2017-07-31         99        88        77            66           61   \n",
+       "\n",
+       "     DewPointLowF HumidityHighPercent HumidityAvgPercent HumidityLowPercent  \\\n",
+       "0              43                  93                 75                 57   \n",
+       "1              28                  93                 68                 43   \n",
+       "2              23                  76                 52                 27   \n",
+       "3              21                  89                 56                 22   \n",
+       "4              36                  86                 71                 56   \n",
+       "...           ...                 ...                ...                ...   \n",
+       "1314           61                  82                 54                 25   \n",
+       "1315           55                  87                 54                 20   \n",
+       "1316           55                  82                 51                 19   \n",
+       "1317           63                  69                 48                 27   \n",
+       "1318           54                  64                 43                 22   \n",
+       "\n",
+       "      ... SeaLevelPressureAvgInches SeaLevelPressureLowInches  \\\n",
+       "0     ...                     29.68                     29.59   \n",
+       "1     ...                     30.13                     29.87   \n",
+       "2     ...                     30.49                     30.41   \n",
+       "3     ...                     30.45                      30.3   \n",
+       "4     ...                     30.33                     30.27   \n",
+       "...   ...                       ...                       ...   \n",
+       "1314  ...                     29.97                     29.88   \n",
+       "1315  ...                      29.9                     29.81   \n",
+       "1316  ...                     29.86                     29.79   \n",
+       "1317  ...                     29.91                     29.87   \n",
+       "1318  ...                     29.97                     29.91   \n",
+       "\n",
+       "     VisibilityHighMiles VisibilityAvgMiles VisibilityLowMiles WindHighMPH  \\\n",
+       "0                     10                  7                  2          20   \n",
+       "1                     10                 10                  5          16   \n",
+       "2                     10                 10                 10           8   \n",
+       "3                     10                 10                  7          12   \n",
+       "4                     10                 10                  7          10   \n",
+       "...                  ...                ...                ...         ...   \n",
+       "1314                  10                 10                 10          12   \n",
+       "1315                  10                 10                 10          14   \n",
+       "1316                  10                 10                 10          12   \n",
+       "1317                  10                 10                 10          13   \n",
+       "1318                  10                 10                 10          12   \n",
+       "\n",
+       "     WindAvgMPH WindGustMPH PrecipitationSumInches               Events  \n",
+       "0             4          31                   0.46  Rain , Thunderstorm  \n",
+       "1             6          25                      0                       \n",
+       "2             3          12                      0                       \n",
+       "3             4          20                      0                       \n",
+       "4             2          16                      T                       \n",
+       "...         ...         ...                    ...                  ...  \n",
+       "1314          5          21                      0                       \n",
+       "1315          5          20                      0                       \n",
+       "1316          4          17                      0                       \n",
+       "1317          4          20                      0                       \n",
+       "1318          4          20                      0                       \n",
+       "\n",
+       "[1314 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df.VisibilityHighMiles <= '10']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
